--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <div class="header_button">
       <div class="button_hero">
-        <a href="buylink"
+        <a href="https://pump.fun/coin/Ag5VKXkr8uTCdeMasovK5R95aqzApPQqjks1wjHwpump"
           target="_blank" class="continue w-button">BUY
           $ASTRONUT</a>
       </div>
@@ -107,8 +107,8 @@
           Join the $ASTRONUT movement on the Solana chain and embrace it. Get ready to go ASTRONUT or go home as we charge towards ASTRONUT heights together.
         </p>
         <div class="block_ca">
-          <div class="ca">0x0000000000000000000000</div>
-          <div class="ca_mobile">0x0000000000000000000000</div>
+          <div class="ca">Ag5VKXkr8uTCdeMasovK5R95aqzApPQqjks1wjHwpump</div>
+          <div class="ca_mobile">Ag5VKXkr8uTCdeMasovK5R95aqzApPQqjks1wjHwpump</div>
           <a href="#" class="copy w-button"></a>
         </div>
       </div>
@@ -232,7 +232,7 @@
           target="_blank" class="social_footer dex w-button"></a>
         <a href="dexslink" target="_blank"
           class="social_footer dexs w-button"></a>
-        <a href="buylink"
+        <a href="raydium"
           target="_blank" class="social_footer uni w-button"></a>
       </div>
     </div><img class="dog_footer" src="images/logo2.png" alt=""
